# RustHunt

./: .gitignore  Cargo.toml  README.md  big_wordlist.txt  crosshair.txt  file_extensions.txt  mark-wordlist.txt  out.txt  test_wordlist.txt
src/: main.rs
